# SuperScanner

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.MD
.github/: copilot-instructions.md
client/: .gitignore  Cargo.toml  components.json  index.html  my-release-key.keystore  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.css  App.tsx  constants.ts  main.rs  main.tsx  types.ts
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/src/: command.rs  error.rs  lib.rs  main.rs  state.rs  utils.rs
client/src-tauri/src/command/: server_info.rs  tasks.rs
client/src-tauri/src/utils/: config.rs  convert.rs  dto.rs  grpc.rs  logging.rs
client/src/components/: ActivityBar.tsx  BottomNav.tsx  CreateTaskDialog.tsx  DashboardGrid.tsx  NewBackendDialog.tsx  Sidebar.tsx  SidebarPanel.tsx  TaskResultsOverview.tsx  TaskResultsTable.tsx  TaskStatusBadge.tsx  Titlebar.tsx
client/src/components/ui/: scroll-area.tsx
client/src/hooks/: use-scanner-api.ts
client/src/lib/: api.ts  backend-selection.ts  i18n.ts  motion.ts  platform.ts  preload.ts  store.ts  utils.ts
client/src/locales/: en.json  zh.json
client/src/routes/: ServerDetailRoute.tsx  TaskDetailRoute.tsx  TaskPortsRoute.tsx  TaskResultRoute.tsx
client/src/views/: BackendDetail.tsx  CreateTask.tsx  DashboardOverview.tsx  ServersOverview.tsx  SettingsView.tsx  TaskDetail.tsx  TaskPortsDetail.tsx  TaskResultPlaceholderDetail.tsx  TasksOverview.tsx
proto/: server_info.proto  status.proto  tasks.proto
script/: test_grpc.ps1
server/: Cargo.toml  build.rs
server/migrations/: 20241214000000_init.sql  20251215000000_add_progress.sql  20251217000000_add_workflow.sql  20251219000000_add_created_at_index.sql
server/resources/rules/: fscan.toml  httpx.toml  nuclei.toml
server/src/: config.rs  error.rs  main.rs  mod.rs  nuclei_templates.rs  project.rs  proto.rs  rules.rs  services.rs  store.rs  utils.rs
server/src/commands/: curl.rs  fscan.rs  httpx.rs  mod.rs  nmap.rs  nuclei.rs  ping.rs  port_scan.rs  service_probes.rs
server/src/core/: command.rs  mod.rs  runner.rs  traits.rs  types.rs
server/src/domain/: traits.rs  types.rs
server/src/engine/: mod.rs  scheduler.rs  worker.rs
server/src/handler/: mod.rs  status.rs  tasks.rs
server/src/proto/: server_info.rs  server_status.rs  server_tasks.rs  tasks.rs
server/src/schema/: tasks_schema.sql
server/src/services/: task_runner.rs
server/src/storage/: file.rs  migrate.rs  mod.rs  sqlite.rs  target_repo.rs  task_db.rs
server/src/store/: sqlite_db.rs
server/src/utils/: cli.rs  logging.rs  signal.rs
shared/: Cargo.toml  build.rs
shared/src/: lib.rs  logging.rs  models.rs  proto.rs  telemetry.rs
