[workspace]
members = ["client/src-tauri", "server"]
resolver = "3"


[workspace.dependencies]
# ========== Runtime & Async ==========
# Tokio runtime and async helpers
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.89"

# ========== Logging & Tracing ==========
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

# ========== Utilities ==========
once_cell = "1.21.3"
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = "1"
clap = { version = "4.5.53", features = ["derive"] }

# ========== Errors, Traits, Time ==========
thiserror = "2.0.17"
chrono = "0.4.42"

# ========== TLS / Security ==========
rustls = "0.23.35"

# ========== gRPC / Prost / Codegen ==========
# prost + prost types for protobuf
prost = "0.14.2"
prost-types = "0.14.2"
# tonic + prost integration crates
tonic = { version = "0.14.2", features = ["transport","tls-ring"] }
tonic-prost = "0.14.2"
# build-time helpers for generating protobuf/tonic code
tonic-prost-build = "0.14.2"
tonic-build = { version = "0.11.0", features = ["prost"] }
protoc-bin-vendored = "3.2.0"

# ========== Database (sqlx) ==========
sqlx = { version = "0.8.6", features = [
    "macros",
    "sqlite",
    "uuid",
    "runtime-tokio-native-tls",
] }