[package]
name = "SuperScannerServer"
version = "0.1.0"
edition = "2024"
description = "SuperScanner"
license = "MIT"
publish = false

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
once_cell.workspace = true
tokio.workspace = true
sqlx.workspace = true
rustls.workspace = true
anyhow.workspace = true
clap.workspace = true
tonic = { workspace = true, features = ["transport"] }
prost.workspace = true
chrono.workspace = true
prost-types.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
tonic-prost.workspace = true
[build-dependencies]
tonic-prost-build.workspace = true
tonic-build.workspace = true
prost.workspace = true
