[package]
name = "SuperScannerServer"
version = "0.1.0"
edition = "2024"
description = "SuperScanner"
license = "MIT"
publish = false

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
once_cell.workspace = true
tokio.workspace = true
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-native-tls"] }
rustls.workspace = true
anyhow.workspace = true
clap.workspace = true
tonic = { workspace = true, features = ["transport"] }
prost.workspace = true
chrono.workspace = true
prost-types.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
tonic-prost.workspace = true
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
# System info dependencies for ServerInfo service
sysinfo = "0.29"
if-addrs = "0.14.0"
[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-prost-build.workspace = true
tonic-build.workspace = true
prost.workspace = true
