[package]
name = "SuperScannerServer"
version = "0.1.0"
edition = "2024"
description = "SuperScanner"
license = "MIT"
publish = false

[dependencies]
super-scanner-shared.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
once_cell.workspace = true
tokio.workspace = true
sqlx = { workspace = true, features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "migrate",
] }
rustls.workspace = true
anyhow.workspace = true
clap.workspace = true
tonic = { workspace = true, features = ["transport"] }

chrono.workspace = true

thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
tonic-prost.workspace = true
prost-types.workspace = true
prost.workspace = true
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# System info dependencies for ServerInfo service
sysinfo = { version = "0.37.2", features = ["network", "disk"] }
if-addrs = "0.10"
tokio-stream = "0.1"
futures = "0.3"
ipnetwork = "0.21.1"
regex = "1.12.2"
tempfile = "3"

[dev-dependencies]

[build-dependencies]
