[package]
name = "super-scanner-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tracing-appender.workspace = true
tonic = { workspace = true, features = ["transport"] }
prost.workspace = true
prost-types.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
tonic-build.workspace = true
protoc-bin-vendored.workspace = true
prost.workspace = true

[dev-dependencies]
tempfile = "3"
