[package]
name = "SuperScannerClient"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
super-scanner-shared.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true



tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID for backend ids
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"
anyhow.workspace = true
# Added dependencies for gRPC client, async runtime, and persistence
tokio.workspace = true
tonic.workspace=true
toml = "0.9.8"
thiserror = "2"
once_cell = "1.17"
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde", "clock"] }

tonic-prost.workspace = true
prost-types.workspace = true
prost.workspace = true
